# game-of-life

./: BUILDING.md  CMakeLists.txt  CMakeLists_8txt.html  CMakePresets.json  HACKING.md  Makefile  README.md  README_8md.html  about.html  about_8dox.html  annotated.html  classbenlib_1_1Gol.html  classbenlib_1_1MultiVector.html  classbenlib_1_1MultiVectorView.html  dir_49e56c817e5e54854c35e136979f97ca.html  dir_86c0c7a86bb8851c8a8e8aa24010f0c8.html  dir_b2f33c71d4aa5e7af42a1ca61ff5af1b.html  dir_e9f938b6a0a3145773b24039556c08b4.html  dir_ef3b2545113449f8f25e623a543d64e3.html  files.html  gol_8c.html  gol_8cpp.html  gol_8h.html  gol_8hpp.html  index.html  main-raylib-cpp_8cpp.html  main-raylib_8c.html  modules.html  multiDimVector_8hpp.html  namespacebenlib.html  namespaces.html  pages.html  searchdata-v1.js
.github/workflows/: ci.yml  linux.yml
cmake/: dev-mode.cmake  install-rules.cmake  install-script.cmake  variables.cmake
cmake/lib/: benchmark.cmake  gtest.cmake  threadpool.cmake  vector.cmake
source/: main-raylib-cpp.cpp  main-raylib.c  main.cpp
source/lib/: CMakeLists.txt
source/lib/source/: gol.c  gol.cpp  gol.h  gol.hpp  multiDimVector.hpp  vector2D.hpp  vector3D.hpp  vectorFlat2D.hpp
test/: CMakeLists.txt
test/source/: game-of-life-bench.cpp  game-of-life-parity-test.cpp  game-of-life-test-cpp.cpp  game-of-life-test.cpp  game-of-life_test.cpp
